Docker compose Project

--- a/Docker-Compose - project3/app/Dockerfile
+++ b/Docker-Compose - project3/app/Dockerfile
@@ -1,7 +1,8 @@
 #Build
 FROM maven as BUILD_IMAGE
 RUN git clone https://github.com/hkhcoder/vprofile-project.git
-RUN cd vprofile-project && git checkout containers && mvn install
+RUN cd vprofile-project && git checkout containers && mvn clean install 
+RUN ls /vprofile-project/target
 
 FROM tomcat:10-jdk17
 LABEL Project="web-app"
@@ -12,7 +13,8 @@ LABEL CostCenter  = "Ops"
 
 RUN rm -rf /usr/local/tomcat/webapps/*
 
-COPY --from=BUILD_IMAGE /vprofile-project/target/vprofile.war /usr/local/tomcat/webapps/ROOT.war
+COPY --from=BUILD_IMAGE /vprofile-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
+
 
 EXPOSE 8080
 
