--- a/Docker-Compose - project3/nginx/Dockerfile
+++ b/Docker-Compose - project3/nginx/Dockerfile
@@ -8,4 +8,4 @@ LABEL CostCenter  = "Ops"
 LABEL APP     = "nginx"
 
 RUN rm -rf /etc/nginx/conf.d/default.conf
-COPY ./nginx.conf /etc/nginx/conf.d/
+COPY ./nginx.conf /etc/nginx/conf.d/vproapp.conf
