--- a/devops-tools-vagrant/Vagrantfile
+++ b/devops-tools-vagrant/Vagrantfile
@@ -20,22 +20,22 @@ Vagrant.configure("2") do |config|
       jenkins.vm.hostname = "jenkins"
       jenkins.vm.network "private_network", ip: "192.168.57.11"
       jenkins.vm.provider "virtualbox" do |vb|
-         vb.memory = "2048"
+         vb.memory = "4096"
          vb.cpus = 2
       end
       jenkins.vm.provision "shell", path: "./jenkins.sh"
    end
 
-   # config.vm.define "sonarqube" do |sonarqube|
-   #    sonarqube.vm.box = "ubuntu/jammy64"
-   #    sonarqube.vm.hostname = "sonarqube"
-   #    sonarqube.vm.network "private_network", ip: "192.168.57.12"
-   #    sonarqube.vm.provider "virtualbox" do |vb|
-   #       vb.memory = "4096"
-   #       vb.cpus = 2
-   #    end
-   #    sonarqube.vm.provision "shell", path: "./sonarqube.sh"
-   # end
+   config.vm.define "sonarqube" do |sonarqube|
+      sonarqube.vm.box = "ubuntu/jammy64"
+      sonarqube.vm.hostname = "sonarqube"
+      sonarqube.vm.network "private_network", ip: "192.168.57.12"
+      sonarqube.vm.provider "virtualbox" do |vb|
+         vb.memory = "4096"
+         vb.cpus = 2
+      end
+      sonarqube.vm.provision "shell", path: "./sonarqube.sh"
+   end
 
    config.vm.define "nexus" do |nexus|
       nexus.vm.box = "ubuntu/jammy64"
